<resources>
    <string name="app_name">RolePlayersDefinitive</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Name">Name:</string>
    <string name="Lv">Lv:</string>
    <string name="Creation">Creation:</string>
    <string name="Class">Class:</string>
    <string name="Race">Race:</string>
    <string name="State">State:</string>
    <string name="STR">STR:</string>
    <string name="CON">CON:</string>
    <string name="DEX">DEX:</string>
    <string name="INT">INT:</string>
    <string name="WIS">WIS:</string>
    <string name="CHA">CHA:</string>
    <string name="ivCharacter" />
    <string name="fab" />
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="logo">logo</string>
</resources>